# todo

./: .gitignore  CMakeLists.txt  README.md  todo
data/: tasks.json
include/: taskManager.h  taskStorage.h
include/tasks/: timed_task.h
src/: main.cpp  taskManager.cpp  taskStorage.cpp
src/managers/: taskManager.cpp  taskManager.h
src/storage/: taskStorage.cpp  taskStorage.h
src/tasks/: recurring_task.cpp  recurring_task.h  task.cpp  task.h  timed_task.cpp  timed_task.h
